--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start:dev": "cd vite && pnpm i && cd .. && pnpm i && pnpm dev",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -18,6 +19,6 @@
   },
   "packageManager": "pnpm@8.6.2",
   "stackblitz": {
-    "startCommand": "pnpm --filter='./packages/vite' run dev"
+    "startCommand": "pnpm start:dev"
   }
 }
